--- a/config/GlobalCamera.yaml
+++ b/config/GlobalCamera.yaml
@@ -1,10 +1,14 @@
 intrinsicMatrixL: 
- first: [921.6992,0,653.3826]
- second: [0,918.4418,364.1299]
+ first: [914.5137,-0.1122,645.6235]
+ second: [0,913.4998,488.5458]
  third: [0,0,1]
-distortionMatrixL: [0.0128,-0.0343,0.0023,-0.00011,0]
+distortionMatrixL: [-0.0509,0.2680,0.0009,-0.0035,-0.4360]
 intrinsicMatrixR: 
- first: [920.5909,0,646.5033]
- second: [0,917.4791,370.2785]
+ first: [916.4467,-0.0965,639.3201]
+ second: [0,915.0561,477.4493]
  third: [0,0,1]
-distortionMatrixR: [0.0135,-0.0339,0.0032,-0.00011,0]
+distortionMatrixR: [-0.0136,0.1057,0.0020,-0.0032,-0.2530]
+transMatrix:
+ first: [1.0,0.0026,-0.0024,-64.7173]
+ second: [-0.0026,1.0,-0.0087,-0.0687]
+ third: [0.0024,0.0087,1.0,1.2544]
