--- a/config/HandCamera.yaml
+++ b/config/HandCamera.yaml
@@ -1,14 +1,15 @@
 intrinsicMatrixL: 
- first: [913.5889,0.7017,671.1454]
- second: [0,913.7067,517.8589]
+ first: [905.9960,-1.6822,640.0387]
+ second: [0,904.4261,520.3141]
  third: [0,0,1]
-distortionMatrixL: [0.0124,0.0575,0.0029,-0.0011,-0.1556]
+distortionMatrixL: [0.0490,-0.1636,0.00069,-0.0081,0.1321]
 intrinsicMatrixR: 
- first: [907.2019,1.5681,669.2461]
- second: [0,907.8925,501.1368]
+ first: [909.5287,-2.6292,655.9754]
+ second: [0,908.5960,524.7954]
  third: [0,0,1]
-distortionMatrixR: [0.0348,-0.0798,0.0027,-0.00019,0.0467]
+distortionMatrixR: [0.0543,-0.1509,0.0016,-0.0048,0.0992]
 transMatrix:
- first: [0.9999,-0.0100,-0.0085,-65.1455]
- second: [0.0101,0.9999,0.0098,-0.2843]
- third: [0.0084,-0.0099,0.9999,-0.5559]
+ first: [0.9999,-0.0027,-0.0150]
+ second: [0.0026,1.0,-0.0067]
+ third: [0.0150,0.0067,0.9999]
+ translation: [-64.466,-0.666,2.648]
