--- a/config/GlobalCamera.yaml
+++ b/config/GlobalCamera.yaml
@@ -1,14 +1,15 @@
 intrinsicMatrixL: 
- first: [914.5137,-0.1122,645.6235]
- second: [0,913.4998,488.5458]
+ first: [924.0347,-2.0165,643.5059]
+ second: [0,923.4508,487.6865]
  third: [0,0,1]
-distortionMatrixL: [-0.0509,0.2680,0.0009,-0.0035,-0.4360]
+distortionMatrixL: [0.0278,-0.0517,0.00059,-0.0025,0.00065]
 intrinsicMatrixR: 
- first: [916.4467,-0.0965,639.3201]
- second: [0,915.0561,477.4493]
+ first: [908.1221,-2.4286,652.3179]
+ second: [0,908.2021,501.0547]
  third: [0,0,1]
-distortionMatrixR: [-0.0136,0.1057,0.0020,-0.0032,-0.2530]
+distortionMatrixR: [0.0439,-0.0773,0.0017,-0.0037,0.0154]
 transMatrix:
- first: [1.0,0.0026,-0.0024,-64.7173]
- second: [-0.0026,1.0,-0.0087,-0.0687]
- third: [0.0024,0.0087,1.0,1.2544]
+ first: [0.8047,-0.1374,0.5776]
+ second: [0.1268,0.9902,0.0588]
+ third: [-0.5800,0.0259,0.8142]
+ translation: [-436.193,-87.783,128.033]
