--- a/config/GlobalCamera.yaml
+++ b/config/GlobalCamera.yaml
@@ -1,15 +1,15 @@
 intrinsicMatrixL: 
- first: [924.0347,-2.0165,643.5059]
- second: [0,923.4508,487.6865]
+ first: [915.7160,-1.5850,651.1425]
+ second: [0,914.1545,488.7840]
  third: [0,0,1]
-distortionMatrixL: [0.0278,-0.0517,0.00059,-0.0025,0.00065]
+distortionMatrixL: [0.0166,-0.0599,-0.0005214,-0.0026,0.0149]
 intrinsicMatrixR: 
- first: [908.1221,-2.4286,652.3179]
- second: [0,908.2021,501.0547]
+ first: [907.1215,-0.7014,669.5296]
+ second: [0,905.7918,493.7338]
  third: [0,0,1]
-distortionMatrixR: [0.0439,-0.0773,0.0017,-0.0037,0.0154]
+distortionMatrixR: [0.0363,-0.0819,0.00023,0.00046,0.0399]
 transMatrix:
- first: [0.8047,-0.1374,0.5776]
- second: [0.1268,0.9902,0.0588]
- third: [-0.5800,0.0259,0.8142]
- translation: [-436.193,-87.783,128.033]
+ first: [0.6216,-0.1545,0.7680]
+ second: [-0.0397,0.9729,0.2279]
+ third: [-0.7823,-0.1721,0.5986]
+ translation: [-346.438,-33.486,339.086]
